# apps/api/src/pool/contracts.ts
@@ -1,0 +1,5 @@
+import { z } from 'zod';
+
+export const poolResponse = z.object({
+  admitted: z.literal(true),
+});
